# mlx90640-library

./: .gitignore  MLX90640 example data.xlsx  MLX90640_API.cpp  MLX90640_SWI2C_Driver.cpp  Makefile  README.md  fb.c  fb.h  fbuf.cpp  interp.cpp  interpolate.c  interpolate.h  mlx90640_driver.cpp  mlx90640_driver.h  rgb-to-gif.py  test.cpp  video.cpp
examples/: fb.c  fbuf.cpp  hotspot.cpp  interp.cpp  rawrgb.cpp  step.cpp  test.cpp  video.cpp
examples/lib/: fb.c
examples/src/: fbuf.cpp  hotspot.cpp  interp.cpp  rawrgb.cpp  sdlscale.cpp  step.cpp  test.cpp  video.cpp
examples/src/lib/: fb.c
functions/: MLX90640_API.c  MLX90640_API.cpp  MLX90640_I2C_Driver.cpp  MLX90640_LINUX_I2C_Driver.cpp  MLX90640_RPI_I2C_Driver.cpp  MLX90640_SWI2C_Driver.cpp  MLX90640_USB2FIR_Driver.cpp
functions/functions/: MLX90640_API.cpp  MLX90640_SWI2C_Driver.cpp
functions/headers/: MLX90640_API.h  MLX90640_I2C_Driver.h
headers/: MLX90640_API.h  MLX90640_I2C_Driver.h
inc/: MLX90640_I2C_Driver.h
mymlx90640/: CMakeLists.txt  mlx90640_driver.cpp  mlx90640_driver.h  test.cpp  testpic.cpp  testpic.h
python/: MLX90640.i  MLX90640.py  MLX90640_wrap.c  MLX90640_wrap.cxx  README.md  cffi_wrapper.cpp  mlx90640-python.cpp  rgb-to-gif.py  setup.py  test-build.sh  test.py
python/examples/: direct_api.py  gui.py  requirements.txt
